<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="136dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="28dp"
                    android:text="@string/lbl001"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ALARHO"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/ALARHO"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="184dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/DOALAR"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/ALARHO"
                    app:layout_constraintTop_toBottomOf="@+id/ALARHO" />

                <EditText
                    android:id="@+id/ONALAR"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/DOALAR"
                    app:layout_constraintTop_toBottomOf="@+id/DOALAR" />

                <EditText
                    android:id="@+id/SNZMIN"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/ONALAR"
                    app:layout_constraintTop_toBottomOf="@+id/ONALAR" />

                <EditText
                    android:id="@+id/ALBEEP"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/SNZMIN"
                    app:layout_constraintTop_toBottomOf="@+id/SNZMIN" />

                <EditText
                    android:id="@+id/MINLUX"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="22dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/ALBEEP" />

                <EditText
                    android:id="@+id/MAXLUX"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="4dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintBaseline_toBaselineOf="@+id/MINLUX"
                    app:layout_constraintStart_toEndOf="@+id/textView9" />

                <EditText
                    android:id="@+id/MINBRG"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/ALBEEP"
                    app:layout_constraintTop_toBottomOf="@+id/MINLUX" />

                <EditText
                    android:id="@+id/BOOTWT"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="22dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/MINBRG"
                    app:layout_constraintTop_toBottomOf="@+id/MINBRG" />

                <EditText
                    android:id="@+id/TOUCHR"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="22dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/BOOTWT"
                    app:layout_constraintTop_toBottomOf="@+id/BOOTWT" />

                <EditText
                    android:id="@+id/THTCHL"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/TOUCHR" />

                <EditText
                    android:id="@+id/THTCHM"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="4dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintBaseline_toBaselineOf="@+id/THTCHL"
                    app:layout_constraintStart_toEndOf="@+id/textView14" />

                <EditText
                    android:id="@+id/THTCHR"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="4dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintBaseline_toBaselineOf="@+id/THTCHL"
                    app:layout_constraintStart_toEndOf="@+id/textView15" />

                <EditText
                    android:id="@+id/LTCHTH"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/TOUCHR"
                    app:layout_constraintTop_toBottomOf="@+id/THTCHL" />

                <EditText
                    android:id="@+id/ALARMI"
                    android:layout_width="43dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="12dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ALARHO"
                    app:layout_constraintStart_toEndOf="@+id/ALARHO" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="137dp"
                    android:layout_height="23dp"
                    android:text="@string/lbl002"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/DOALAR"
                    app:layout_constraintStart_toStartOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="137dp"
                    android:layout_height="27dp"
                    android:text="@string/lbl003"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ONALAR"
                    app:layout_constraintStart_toStartOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="137dp"
                    android:layout_height="27dp"
                    android:text="@string/lbl004"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/SNZMIN"
                    app:layout_constraintStart_toStartOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="138dp"
                    android:layout_height="28dp"
                    android:text="@string/lbl005"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ALBEEP"
                    app:layout_constraintStart_toStartOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="73dp"
                    android:layout_height="28dp"
                    android:text="@string/lbl006"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/MINLUX"
                    app:layout_constraintStart_toStartOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="90dp"
                    android:layout_height="27dp"
                    android:text="@string/lbl008"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/MINBRG"
                    app:layout_constraintStart_toStartOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="109dp"
                    android:layout_height="27dp"
                    android:text="@string/lbl009"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/BOOTWT"
                    app:layout_constraintStart_toStartOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="140dp"
                    android:layout_height="27dp"
                    android:text="@string/lbl010"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/TOUCHR"
                    app:layout_constraintStart_toStartOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="116dp"
                    android:layout_height="29dp"
                    android:text="@string/lbl014"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/LTCHTH"
                    app:layout_constraintStart_toStartOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="34dp"
                    android:layout_height="24dp"
                    android:text="@string/lbl011"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/THTCHL"
                    app:layout_constraintStart_toStartOf="@+id/textView12" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="43dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/lbl012"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/THTCHL"
                    app:layout_constraintStart_toEndOf="@+id/THTCHL" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="34dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/lbl013"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/THTCHL"
                    app:layout_constraintStart_toEndOf="@+id/THTCHM" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="79dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/lbl007"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/MINLUX"
                    app:layout_constraintStart_toEndOf="@+id/MINLUX" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>